Fixed action buttons wrapping vertically in browse views

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,6 +79,11 @@ div.custom-loader {
 .table {
   color: #444a51;
 }
-table.dataTable tbody tr.pending {
-  background-color: #cefdb9;
+table.dataTable {
+  & tbody tr.pending {
+    background-color: #cefdb9;
+  }
+  & th.actions {
+    min-width: 135px;
+  }
 }
